# Param-Shavak-Anuga

./: .gitattributes  .gitignore  CMakeLists.txt  INSTALL.md  Makefile  README.md  RUNNING.md  USER_GUIDE.md  setup.sh
anuga-viewer-app/: index.html  package-lock.json  package.json  vite.config.js
anuga-viewer-app/src/: App.jsx  index.css  main.jsx
anuga-viewer-app/src/components/: MapComponent.jsx
anuga-viewer-app/src/config/: geoserverConfig.js
anuga-viewer-app/src/services/: geoserverService.js
mahanadi_test_case/: bridge.py  config.py  flood_depth_style.sld  logger.py  settings.toml  settings_loader.py  simulate.py  simulation.py
mahanadi_test_case/geoserver_meta_data/: indexer.properties  timeregex.properties
mahanadi_test_case/input_files/dem/: mahanadi.asc  mahanadi.prj
mahanadi_test_case/input_files/shapfile/: AOI_Anuga.dbf  AOI_Anuga.qmd  AOI_Anuga.shp  AOI_Anuga.shx  Mahanadi_Barrage_Upstream_Location1.dbf  Mahanadi_Barrage_Upstream_Location1.prj  Mahanadi_Barrage_Upstream_Location1.shp  Mahanadi_Barrage_Upstream_Location1.shx
opensource_tools/: node-v24.13.0-linux-x64.tar.xz
